--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,8 @@
 
 		<link rel="stylesheet" href="/smui.css" />
 
+		<title>Habit tracker</title>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
