--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,9 @@
 
 		<link rel="stylesheet" href="/smui.css" />
 
+		<!-- Trying to solve PWA problems -->
+		<link rel="manifest" href="manifest.webmanifest" />
+
 		<title>Habit tracker</title>
 
 		%sveltekit.head%
