--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/logo.png" />
+		<link rel="mask-icon" href="%sveltekit.assets%/logo.png" color="#FFFFFF" />
 		<meta name="viewport" content="width=device-width" />
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
