brushing up PWA

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,10 @@
 		<link rel="icon" href="%sveltekit.assets%/logo.png" />
 
 		<!-- PWA -->
+		<!-- Not sure if necessary -->
+		<!-- https://vite-pwa-org.netlify.app/guide/pwa-minimal-requirements.html#entry-point -->
 		<link rel="mask-icon" href="%sveltekit.assets%/logo.png" color="#FFFFFF" />
+		<!-- TODO: this is most likely wrong as size does not match -->
 		<link rel="apple-touch-icon" href="%sveltekit.assets%/logo.png" sizes="180x180" />
 		<meta name="theme-color" content="#444444" />
 		<meta name="description" content="A simple habit tracker" />
